--- a/android/src/main/res/layout/small_native_ad_layout.xml
+++ b/android/src/main/res/layout/small_native_ad_layout.xml
@@ -11,18 +11,17 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:minHeight="50dp"
-        android:paddingEnd="5dp"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/ad_notification_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#FAA04E"
+            android:background="@android:color/transparent"
             android:gravity="center"
             android:paddingHorizontal="2dp"
             android:text="Ad"
-            android:textColor="#FFFFFF"
+            android:textColor="#FAA04E"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -39,19 +38,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textSize="12sp"
                 android:visibility="gone" />
 
             <ImageView
                 android:id="@+id/ad_app_icon"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:adjustViewBounds="true"
                 android:layout_margin="5dp"/>
 
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -62,14 +67,14 @@
                         android:id="@+id/ad_headline"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textColor="@android:color/black"
+                        android:textColor="@android:color/white"
                         android:textSize="16sp"
                         android:textStyle="bold"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingBottom="5dp">
+                        android:paddingBottom="10dp">
 
                         <TextView
                             android:id="@+id/ad_advertiser"
@@ -77,8 +82,7 @@
                             android:layout_height="match_parent"
                             android:gravity="bottom"
                             android:textSize="14sp"
-                            android:textStyle="bold"
-                            android:padding="2dp" />
+                            android:textStyle="bold" />
 
                         <RatingBar
                             android:id="@+id/ad_stars"
@@ -87,41 +91,48 @@
                             android:layout_height="wrap_content"
                             android:isIndicator="true"
                             android:numStars="5"
-                            android:progressTint="#444546"
+                            android:progressTint="@android:color/white"
                             android:stepSize="0.5" />
 
                         <TextView
                             android:id="@+id/ad_price"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:padding="2dp"
-                            android:textColor="@android:color/black"
+                            android:paddingStart="5dp"
+                            android:paddingLeft="5dp"
+                            android:paddingEnd="5dp"
+                            android:paddingRight="5dp"
+                            android:textColor="@android:color/white"
                             android:textSize="12sp" />
 
                         <TextView
                             android:id="@+id/ad_store"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textColor="@android:color/black"
-                            android:padding="2dp"
+                            android:paddingStart="5dp"
+                            android:paddingLeft="5dp"
+                            android:paddingEnd="5dp"
+                            android:paddingRight="5dp"
+                            android:textColor="@android:color/white"
                             android:textSize="12sp" />
                     </LinearLayout>
-
-                    <Button
-                        android:id="@+id/ad_call_to_action"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/shape"
-                        android:backgroundTint="#21A87D"
-                        android:backgroundTintMode="src_over"
-                        android:gravity="center"
-                        android:padding="10dp"
-                        android:text="Install Now"
-                        android:textColor="@android:color/white"
-                        android:textSize="14sp"
-                        tools:ignore="SpeakableTextPresentCheck" />
-
                 </LinearLayout>
+
+                <Button
+                    android:id="@+id/ad_call_to_action"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/shape"
+                    android:backgroundTint="#FF8784"
+                    android:backgroundTintMode="src_over"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="Install Now"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp"
+                    tools:ignore="SpeakableTextPresentCheck" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </com.google.android.gms.ads.nativead.NativeAdView>
